force-app/main/default/objects/Year_Participated__c/Year_Participated__c.object-meta.xml
<CustomObject>
    <description>This will be a junction object that will allow a single Participant to be linked to multiple Years. This object will store data specific to the year they participate.</description>
    <label>Year Participated</label>
    <nameField>
        <displayFormat>YP-{0000}</displayFormat>
        <label>Years Participated Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Years Participated</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>