force-app/main/default/objects/Year_Participated__c/fields/Available_Points_Left__c.field-meta.xml
<CustomField>
    <fullName>Available_Points_Left__c</fullName>
    <description>These are the number of points that the participant can still earn.</description>
    <inlineHelpText>These are the number of points that the participant can still earn.</inlineHelpText>
    <label>Available Points Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>