force-app/main/default/objects/Year_Participated__c/fields/Earned_Points__c.field-meta.xml
<CustomField>
    <fullName>Earned_Points__c</fullName>
    <description>This will be the sum of the &apos;Assigned Points&apos; fields for all of the participants&apos; correct picks. Automatically calculated by an Apex job.</description>
    <inlineHelpText>This will be the sum of the &apos;Assigned Points&apos; fields for all of the participants&apos; correct picks. Automatically calculated by an Apex job.</inlineHelpText>
    <label>Earned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>