force-app/main/default/objects/Year_Participated__c/fields/Number_of_Correct_Picks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Correct_Picks__c</fullName>
    <description>This will be the number of correctly placed picks. It will be calculated by an automated Apex job.</description>
    <inlineHelpText>This will be the number of correctly placed picks. It will be calculated by an automated Apex job.</inlineHelpText>
    <label>Number of Correct Picks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>