force-app/main/default/objects/Year_Participated__c/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <description>This is the custom passcode that the user will set each year.</description>
    <label>Passcode</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>