force-app/main/default/objects/Year_Participated__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Years_Participated</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>