force-app/main/default/objects/Year_Participated__c/validationRules/Passcode_Must_Be_4_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Passcode_Must_Be_4_Numbers</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(Passcode__c,&quot;^\\d{4}?$&quot;)</errorConditionFormula>
    <errorDisplayField>Passcode__c</errorDisplayField>
    <errorMessage>The passcode entered must be 4 numbers.

Example: 1357</errorMessage>
</ValidationRule>